--- a/MemoryCardGame/Base.lproj/Main.storyboard
+++ b/MemoryCardGame/Base.lproj/Main.storyboard
@@ -16,11 +16,59 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brain" translatesAutoresizingMaskIntoConstraints="NO" id="HSs-u6-M5E">
+                                <rect key="frame" x="204" y="28" width="191" height="185"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="185" id="KR9-Eb-UXH"/>
+                                    <constraint firstAttribute="width" constant="191" id="tSA-8n-201"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AOv-EM-0sz">
+                                <rect key="frame" x="174" y="248" width="253" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="253" id="7fd-HP-Kbm"/>
+                                    <constraint firstAttribute="height" constant="30" id="SmX-Ln-ZbE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rjg-oV-yNh">
+                                <rect key="frame" x="174" y="313" width="253" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NXv-hT-Efp"/>
+                                    <constraint firstAttribute="width" constant="253" id="OCq-7X-6sh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="njb-07-Hgw">
+                                <rect key="frame" x="226.5" y="378" width="147" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="147" id="66t-g3-sRI"/>
+                                    <constraint firstAttribute="height" constant="42" id="UFF-AF-rqC"/>
+                                </constraints>
+                                <state key="normal" title="Login"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HSs-u6-M5E" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="5A2-7z-T5j"/>
+                            <constraint firstItem="AOv-EM-0sz" firstAttribute="top" secondItem="HSs-u6-M5E" secondAttribute="bottom" constant="35" id="5sY-wR-BJm"/>
+                            <constraint firstItem="njb-07-Hgw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lml-0m-bl4"/>
+                            <constraint firstItem="Rjg-oV-yNh" firstAttribute="top" secondItem="AOv-EM-0sz" secondAttribute="bottom" constant="35" id="Un6-TR-SWw"/>
+                            <constraint firstItem="HSs-u6-M5E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dhy-D7-nn1"/>
+                            <constraint firstItem="Rjg-oV-yNh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ft2-YR-FBn"/>
+                            <constraint firstItem="njb-07-Hgw" firstAttribute="top" secondItem="Rjg-oV-yNh" secondAttribute="bottom" constant="35" id="zDg-LU-0uI"/>
+                            <constraint firstItem="AOv-EM-0sz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zJa-ws-UpK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="brain" width="572" height="572"/>
+    </resources>
 </document>
